--- a/metis-web/packages/web/src/pages/DashboardPage.module.css
+++ b/metis-web/packages/web/src/pages/DashboardPage.module.css
@@ -67,7 +67,7 @@
 
   .createButton {
     position: fixed;
-    bottom: 0;
+    bottom: 56px;
     left: 0;
     right: 0;
     width: 100%;
